# waste7-final-locked-cleanzip

./: .gitignore  .replit  AGENT_CONTROL_LOCK.md  AUTOMATION_OWNERSHIP_LOCK.md  AUTO_OPTIMIZER_AUDIT_LOCK.md  REPAIR_NOTES.md  REPLIT_AGENT_LOCK_READ_FIRST.md  TRADING_ENGINE_MANUAL.md  ZIP_REPAIR_FINAL_NOTES.md  backend_test.py  design_guidelines.json  design_guidelines.md  pyproject.toml
.agents/memory/: MEMORY.md  dashboard-price-source.md  deployment-vm-silence.md  eodhd-coverage.md  eodhd-quota.md  gate-settings-propagation.md  trade-execution-blockers.md  trading-app-setup.md  yahoo-feed.md
.emergent/: emergent.yml
attached_assets/: Pasted--backend-server-py-import-os-from-pathlib-import-Path-f_1781412940673.txt  Pasted--backend-server-py-import-os-import-httpx-from-pathlib-_1781414400223.txt  Pasted--frontend-public-dashboard-v61-js-const-MARKETS-USA-key_1781413000418.txt  Pasted-fetch-all-equity-batch-backend-This-replaces-the-yfinan_1781414218112.txt  Pasted-function-marketThresholds-key-m-lcData-let-cfg-if-lcDat_1781615188190.txt
backend/: .env.example  cycle_offset.json  gates_settings.json  requirements.txt  server.py
backend/core/: config.py  data_sources.py  db.py  elite_gate.py  engine_runner.py  (+7 more)
frontend/: package.json
memory/: PRD.md
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_8.json  iteration_9.json
(+43 files in other folders)
