[project]
name = "waste3-locked-clean"
version = "0.1.0"
description = "Locked Waste 3 trading command centre"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.25.0",
    "python-dotenv==1.2.2",
    "requests==2.32.3",
    "pandas==3.0.1",
    "numpy==2.4.3",
    "yfinance==1.2.0",
    "pytz==2026.1.post1",
    "python-multipart==0.0.22",
    "ctrader_open_api==0.9.2",
]
